--- a/client/src/components/Cakes/CakeList.module.css
+++ b/client/src/components/Cakes/CakeList.module.css
@@ -1,3 +1,22 @@
+.container {
+  background-color: beige;
+}
+
 .h1 {
-  font: 1em sans-serif;
+  text-align: center;
+}
+
+.cakeCard {
+  max-width: 700px;
+  height: 150px;
+  border: 1px solid black;
+  margin: auto;
+  margin-bottom: 15px;
+  display: flex;
+}
+
+.cakeImg {
+  width: 350px;
+  height: 150px;
+  object-fit: contain;
 }
