--- a/client/src/components/Cakes/CakeList.module.css
+++ b/client/src/components/Cakes/CakeList.module.css
@@ -1,9 +1,13 @@
 .container {
-  background-color: beige;
+  background-color: #f5f5dc;
+  margin-left: 15%;
+  margin-top: 0;
+  height: 100vh;
 }
 
 .h1 {
   text-align: center;
+  margin-bottom: 15px;
 }
 
 .cakeCard {
