--- a/client/src/components/Cakes/NewCakeForm.module.css
+++ b/client/src/components/Cakes/NewCakeForm.module.css
@@ -1,3 +1,9 @@
-.input {
-  font-size: 1rem;
+.input,
+.input textarea {
+  padding-bottom: 1rem;
+}
+
+.input label {
+  font-size: 1.1rem;
+  padding-right: 1rem;
 }
