--- a/client/src/components/Cakes/CakeList.module.css
+++ b/client/src/components/Cakes/CakeList.module.css
@@ -1,11 +1,6 @@
-.container {
-  background-color: #f5f5dc;
-  margin-left: 15%;
-  margin-top: 0;
-  height: 100vh;
-}
-
 .h1 {
   text-align: center;
-  margin-bottom: 15px;
+  margin: 0 auto;
+  margin-top: 15vh;
+  margin-bottom: 50px;
 }
