--- a/client/src/components/Layout/SideNav.module.css
+++ b/client/src/components/Layout/SideNav.module.css
@@ -5,26 +5,13 @@
   z-index: -1;
   top: 0;
   left: 0;
-  background-color: rgb(255, 211, 219);
+  background-color: rgba(255, 211, 219, 0.535);
   display: flex;
   flex-direction: column;
   align-items: center;
   overflow: auto;
 }
 
-.sideNav a:nth-child(1) {
+.sidenav ul {
   margin-top: 15vh;
-}
-
-.sideNav a {
-  margin-bottom: 15px;
-  text-decoration: none;
-  color: brown;
-  font-size: 1.4rem;
-  border-bottom: 1px solid rgb(250, 166, 180);
-}
-
-.sideNav a:active {
-  background-color: brown;
-  color: pink;
 }
